finished port of codesearch engine to new infrastructure